--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,15 @@
 {
   font-family: sans-serif;
 }
+
+header
+{
+  background-color: black;
+  color: white;
+  padding: 10px;
+}
+
+div
+{
+  margin: 20px 5px;
+}
